--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-star-rating": "^1.1.0",
     "react-native-svg": "^13.4.0",
+    "react-native-toast-message": "^2.1.7",
     "react-native-vector-icons": "^10.0.0",
     "react-native-webview": "11.26.0",
     "tailwindcss": "^3.2.7"
